# mcp-server

./: README.md  authentication.py  main.py  pyproject.toml
src/mcp_endpoint/: server.py
